# hass-airtouch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: lint.yml  release.yml  validate.yml
custom_components/airtouch/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  cover.py  devices.py  entities.py  icons.json  manifest.json  sensor.py  services.yaml  strings.json  time.py  update.py
custom_components/airtouch/translations/: en.json
scripts/: validate-manifest.py
